# CIDLS

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  AGENTS_Schedule.md  AGENTS直交圧縮.md  AGENTS要点まとめ.md  CIDLSで実現できること.txt  CIDLSパイプラインマインドマップ.html  CIDLS生成プロンプト.txt  LP.html  STORY.html  TODO.md  cidls_pipeline.html  cidls_platform_overview.html  code_apps_automations_daily_safe.md  concept_slide_knowhow_simple_rough_general_examples.md  devrag-config.json  graph_project_mindmap.html  index.html  installer.bat  kanban_project.html  pre_prompt_cycle.bat  project_kanban.html  pyproject.toml  setup_devrag.ps1  コンセプトスライド.html  システム要件定義書.html  テストシナリオ兼結果チェックリスト.html  ドキュメント一覧.html  ユーザーマニュアル.html  基本設計書.html  構成定義書 兼 運用保守手順書.html  要求仕様書.html  要求定義書.html  要求要件定義書.html  運用手順書.html
.claude/: settings.local.json
.gemini/: GEMINI.md
.github/: copilot-instructions.md
computer_use/: computer_use.py  ocr_engine.py  screen_capture.py
docs/: Windows11_OCR_RPAInput実装仕様_2026-04-29.md  cidls_concept_pipeline.md  data_flow.md  handover_package.md  hearing_notes.md  ocr_pipeline_requirements.md  ocr_pipeline_runbook.md  operations_runbook.md  qa_matrix.md  requirements_definition.md  test_scenarios.md
documents/: AGENTS要点まとめ.md  agentic-autonomy-commercial-assessment.md  ai-dlc-cidls-integration.md  capdka-cycle.md  consulting-assessment-governance-risk.md  diff-isolation.md  guard-rules.md  horizontal-sync.md  multi-persona-council.md  quality-standards.md  security-distribution-architecture.md  security-rules.md  system-assessment.md  tech-stack.md  テンプレート_テストシナリオ兼結果チェックリスト_ひな形.xlsx  テンプレート_ドキュメント一覧_ひな形.xlsx  テンプレート_要求要件定義書_ひな形.xlsx  テンプレート_詳細設計_構成定義書_兼_運用保守手順書_ひな形.xlsx  共通フレーム2007.md  日次自己進化プロンプト_2026-05-08.md
tests/: conftest.py  (+24 more)
(+142 files in other folders)
